# ASP

./: .gitignore  LMS.asv  LMS.m  LMS_algo.m  NLMS.asv  NLMS.m  README.md  aplms.asv  aplms.m  hellomqh.mqh  pyproject.toml  steepest.py  steepestCurve.py  steepest_descent.m  steepest_descent.pages  steepestcase2.py  steepestcase3.py  steepestcase4.py  steepesttest.py
.github/workflows/: tests.yml
LMS_NLMS/SNR不同_特性相同_步數敏感度/: importfile.m  lms_SNR15.mat  lms_SNR25.mat  lms_SNR5.mat  nlms_SNR15.mat  nlms_SNR25.mat  nlms_SNR5.mat  untitled3.asv  untitled3.m
LMS_NLMS/SNR相同_特性不同_步數敏感度/: lms.mat  nlms.mat  untitled3.asv
LMS_NLMS/sameF_diffSNR/: errotosnr2.m  errtosnr.asv  errtosnr.m  errtosnr_mu0d0001.mat  lms.mat  mu0d0001one.fig  nlms.mat
LMS_NLMS/sameSNR_diffF/: DiffFone.fig  DiffFthird.fig  DiffFtwo.fig  LMSdiffF.m  NLMSdiffF.asv  NLMSdiffF.m  datadiffF.mat  errtoSNRdiffF.m
NLMS_APA/convergenceCompare/: aplms.asv  aplms.m  compare.m  untitled.fig  untitled2.fig  untitled3.fig
NLMS_APA/sameF/: untitled.fig  untitled2.fig
NLMS_APA/sameSNR/: QAM.m  compareSameF.m  matlab.mat  untitled.fig  untitled2.fig
NLMS_APA/voice_z=5/: matlab.mat
examples/: steepest_descent.py
src/adaptive_filters/: __init__.py  benchmark.py  filters.py  steepest_descent.py
tests/: test_filters.py  test_steepest_descent.py
