[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-filter-lab"
version = "1.0.0"
description = "Reproducible implementations of LMS, NLMS, APA, and steepest descent."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.scripts]
adaptive-filter-benchmark = "adaptive_filters.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

